<resources>
    <string name="app_name">Расту как разработчик</string>
    <string name="image">ANDROID</string>
    <string name="to_first">GO TO THE FIRST ACTIVITY</string>
    <string name="to_first_land">TO FIRST</string>
    <string name="to_second">GO TO THE SECOND ACTIVITY</string>
    <string name="_2">Введите символы</string>
    <string name="_1">1</string>
    <string name="_2b">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="CLEAR">CLEAR</string>
    <string name="error_text">WRONG CODE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
